Alteração da view de edição de paciente.

--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -87,21 +87,21 @@
                     <!--INICIO DO SEGUNDO FORM-->
 
                     <div class="control-group">
-                        <label for="inputEmail" class="control-label">Rua:</label>
+                        <label for="inputEmail" class="control-label">Endereço:</label>
                         <div class="controls">
                             <?php echo $this->form->Endereco->endereco ?>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="inputEmail" class="control-label">Complemento: </label>
-                        <div class="controls">
-                            <?php echo $this->form->Endereco->complemento ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Número:</label>
                         <div class="controls">
                             <?php echo $this->form->Endereco->numero ?>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Complemento: </label>
+                        <div class="controls">
+                            <?php echo $this->form->Endereco->complemento ?>
                         </div>
                     </div>
                     <div class="control-group">
