Alteração da view de edição de paciente.

--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
-    <legend>Cadastrar Pacientes</legend>
+    <legend>Cadastrar Paciente</legend>
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#tab1">Dados Principais</a></li>
@@ -101,15 +101,15 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Complemento: </label>
-                                <div class="controls">
-                                    <?php echo $this->form->Endereco->complemento ?>
-                                </div>
-                            </div>
-                            <div class="control-group">
                                 <label for="inputEmail" class="control-label">Número:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->numero ?>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Complemento: </label>
+                                <div class="controls">
+                                    <?php echo $this->form->Endereco->complemento ?>
                                 </div>
                             </div>
                             <div class="control-group">
