Alteração da view de edição de paciente.

--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
-    <legend>Editar Pacientes</legend>
+    <legend>Alterar Pacientes</legend>
     <?php if ($this->mensagem): ?>
         <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
     <?php endif; ?>
