--- a/application/modules/admin/views/scripts/perfil/editar.phtml
+++ b/application/modules/admin/views/scripts/perfil/editar.phtml
@@ -14,7 +14,7 @@
             <li class="active"><a data-toggle="tab" href="#tab1">Dados Principais</a></li>
 
         </ul>
-        <form class="form-horizontal" method="post">
+        <form action="" class="form-horizontal" method="post">
             <div class="tab-content">
                 <div id="tab1" class="tab-pane active">
 
@@ -26,45 +26,70 @@
                         <div class="rows-fluid">
                             <div class="span6">
                                 <div class="control-group">
-                                    <div class="control-group">
-                                        <label for="inputEmail" class="control-label">Usuário:</label>
-                                        <div class="controls">
-                                            <input type="text" placeholder="Text input">
-                                        </div>
-                                    </div>
-                                    <label for="inputEmail" class="control-label">Nome Completo:</label>
+
+                                    <label for="inputEmail" class="control-label">Usuário:</label>
                                     <div class="controls">
-                                        <input type="text" placeholder="Text input">
+                                        <?php echo $this->form->Login->nome_login ?>
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <label for="inputEmail" class="control-label">Telefone Celular:</label>
+                                    <div class="controls">
+                                        <?php echo $this->form->Telefone->num_tel1 ?>
                                     </div>
                                 </div>
                                 <div class="control-group">
                                     <label for="inputEmail" class="control-label">E-mail:</label>
                                     <div class="controls">
-                                        <input type="text" placeholder="Text input">
+                                        <?php echo $this->form->email ?>
                                     </div>
                                 </div>
 
                             </div>
                             <div class="span6">
-                                <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Telefone Celular:</label>
-                                    <div class="controls">
-                                        <input type="text" placeholder="Text input">
-                                    </div>
-                                </div>
+
                                 <div class="control-group">
                                     <label for="inputEmail" class="control-label">Senha:</label>
                                     <div class="controls">
-                                        <input type="text" placeholder="Text input">
+                                        <?php echo $this->form->Login->senha_login ?>
                                     </div>
                                 </div>
                                 <div class="control-group">
                                     <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
                                     <div class="controls">
-                                        <input type="text" placeholder="Text input">
+                                        <?php echo $this->form->Login->senha_login ?>
                                     </div>
                                 </div>
-
+                                <div class="hidden">
+                                    <?php
+                                    
+                                    echo $this->form->cod_pessoa;
+                                    echo $this->form->Login->nome_login;
+                                    echo $this->form->nome;
+                                    echo $this->form->nome_pai;
+                                    echo $this->form->nome_mae;
+                                    echo $this->form->dt_nasc;
+                                    echo $this->form->rg;
+                                    echo $this->form->cpf;
+                                    echo $this->form->registro_nasc;
+                                    echo $this->form->cod_estado_civil;
+                                    echo $this->form->sexo;
+                                    echo $this->form->Endereco->endereco;
+                                    echo $this->form->Endereco->complemento;
+                                    echo $this->form->Endereco->numero;
+                                    echo $this->form->Endereco->bairro;
+                                    echo $this->form->Endereco->cep;
+                                    echo $this->form->Endereco->cod_uf;
+                                    echo $this->form->Endereco->cod_cid;
+                                    echo $this->form->Funcionario->matricula;
+                                    echo $this->form->Funcionario->cod_cargo;
+                                    echo $this->form->Funcionario->cod_funcao;
+                                    echo $this->form->cod_un_saude;
+                                    echo $this->form->Status->cod_status;
+                                    echo $this->form->Telefone->num_tel2;
+                                    echo $this->form->cod_perfil;
+                                    ?>
+                                </div>
                             </div>
                             <div class="rows-fluid">
                                 <div class="span12">
@@ -78,11 +103,9 @@
                             </div>
                         </div> <!--FIM DO PRIMEIRO MENU-->
                     </div>
-
-
-                    </form>
                 </div>
             </div>
+        </form>
     </div>
 </fieldset>
 
