--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <?php echo $this->modal ?>
 <fieldset>
-    <legend>Consultar Funcionários</legend>
+    <legend>Consultar Funcionário</legend>
 
     <form class="form-inline" method="post" action="">
         <select name="tipoConsulta">
