--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -5,7 +5,7 @@
     <div class="alert alert-warning">Nenhum resultado encontrado</div>
 <?php endif; ?>
 
-<legend>Consultar Pacientes</legend>
+<legend>Consultar Paciente</legend>
 <form class="form-inline" action="" method="post">
     <select name="tipoConsulta">
         <option value="">Selecione a opção</option>
