--- a/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
-    <legend>Cadastrar Unidades de Saúde</legend>
+    <legend>Cadastrar Unidade de Saúde</legend>
     <?php
     if ($this->mensagem):
         ?>
@@ -15,41 +15,27 @@
             <li class=""><a data-toggle="tab" href="#tab2">Endereço</a></li>
 
         </ul>
-        <form class="form-horizontal" method="post">
+        <form class="form-horizontal" method="post" action="">
             <div class="tab-content">
-                <div id="tab1" class="tab-pane active">
+                <div id="tab1" class="tab-pane">
 
                     <!--INICIO DO PRIMEIRO MENU-->
-
+                    
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Nome da Unidade:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->nome_un_saude ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Número da Unidade:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->num_un_saude ?>
                                 </div>
                             </div>
-                            <div class="control-group">
-                                <label for="inputEmail" class="control-label">Telefone:</label>
-                                <div class="controls">
-                                    <input type="text" placeholder="Text input">
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label for="inputEmail" class="control-label">E-mail:</label>
-                                <div class="controls">
-                                    <input type="text" placeholder="Text input">
-                                </div>
-                            </div>
-
                         </div>
-
                     </div>
                     <!--  <div class="rows-fluid">
                           <div class="span12">
@@ -63,34 +49,34 @@
 
                 </div> <!--FIM DO PRIMEIRO MENU-->
 
-                <div id="tab2" class="tab-pane">
+                <div id="tab2" class="tab-pane active">
 
                     <!--INICIO DO SEGUNDO MENU-->
 
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Rua:</label>
+                                <label for="inputEmail" class="control-label">Endereço:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label for="inputEmail" class="control-label">Complemento: </label>
-                                <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->Endereco->endereco ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Número:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->Endereco->numero ?>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Complemento: </label>
+                                <div class="controls">
+                                    <?php echo $this->form->Endereco->complemento ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Bairro:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->Endereco->bairro ?>
                                 </div>
                             </div>
                         </div>
@@ -98,33 +84,27 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">CEP:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->Endereco->cep ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">UF:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                        <option>5</option>
-                                    </select>
+                                    <?php echo $this->form->Endereco->cod_uf ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Cidade:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                        <option>5</option>
-                                    </select>
+                                    <?php echo $this->form->Endereco->cod_cid ?>
                                 </div>
                             </div>
+                        </div>
+                        <div class="hidden">
+                            <?php 
+                                echo $this->form->cod_un_saude; 
+                                echo $this->form->cod_end; 
+                            ?>
                         </div>
                     </div>
 
@@ -143,4 +123,3 @@
         </form>
     </div>
 </fieldset>
-
