Alteraçoes no modulo admin -

--- a/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
-    <legend>Editar Funcionários</legend>
+    <legend>Alterar Funcionário</legend>
     <?php if ($this->mensagem): ?>
         <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
     <?php endif; ?>
@@ -84,21 +84,21 @@
                     <!--INICIO DO SEGUNDO FORM-->
 
                     <div class="control-group">
-                        <label for="inputEmail" class="control-label">Rua:</label>
+                        <label for="inputEmail" class="control-label">Endereço:</label>
                         <div class="controls">
                             <?php echo $this->form->Endereco->endereco ?>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="inputEmail" class="control-label">Complemento: </label>
-                        <div class="controls">
-                            <?php echo $this->form->Endereco->complemento ?>
                         </div>
                     </div>
                     <div class="control-group">
                         <label for="inputEmail" class="control-label">Número:</label>
                         <div class="controls">
                             <?php echo $this->form->Endereco->numero ?>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Complemento: </label>
+                        <div class="controls">
+                            <?php echo $this->form->Endereco->complemento ?>
                         </div>
                     </div>
                     <div class="control-group">
